# pandoc-app

./: README.md  index.html  package-lock.json  package.json  pandoc-plain-language-description.md  pandoc-plan.md  pandoc-status.md  vite.config.js
src/: main.js  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs
